--- a/SupplierInventorySystem/SupplierInventorySystem.csproj
+++ b/SupplierInventorySystem/SupplierInventorySystem.csproj
@@ -1,11 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <Project Sdk="Microsoft.NET.Sdk.Web">
+  
     <PropertyGroup>
-      <TargetFramework>net9.0</TargetFramework>
+      <TargetFramework>net8.0</TargetFramework>
+      <Nullable>enable</Nullable>
+      <ImplicitUsings>enable</ImplicitUsings>
       <RootNamespace>SupplierInventorySystem</RootNamespace>
+      <StaticWebAssetBasePath>/</StaticWebAssetBasePath>
+      <DisableStaticWebAssetsCaching>true</DisableStaticWebAssetsCaching>
     </PropertyGroup>
-  </Project>
+  
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
