--- a/SupplierInventorySystem/SupplierInventorySystem.csproj
+++ b/SupplierInventorySystem/SupplierInventorySystem.csproj
@@ -1,17 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  
-    <PropertyGroup>
-      <TargetFramework>net8.0</TargetFramework>
-      <Nullable>enable</Nullable>
-      <ImplicitUsings>enable</ImplicitUsings>
-      <RootNamespace>SupplierInventorySystem</RootNamespace>
-      <StaticWebAssetBasePath>/</StaticWebAssetBasePath>
-      <DisableStaticWebAssetsCaching>true</DisableStaticWebAssetsCaching>
-    </PropertyGroup>
-  
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>SupplierInventorySystem</RootNamespace>
+    <StaticWebAssetBasePath>/</StaticWebAssetBasePath>
+    <DisableStaticWebAssetsCaching>true</DisableStaticWebAssetsCaching>
+  </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,6 +20,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="tmp\" />
   </ItemGroup>
 
 </Project>
